# Covercheck-Toronto

./: .dockerignore  .gitignore  Dockerfile.api  Dockerfile.streamlit  LICENSE  README.md  artifact_inventory.txt  docker-compose.yml  pyproject.toml  pytest.ini  requirements.txt
app/: api.py  covercheck_dashboard.py
config/: config.yaml
docs/: citywide_surge_511_feature_importance_full.csv  citywide_surge_511_feature_importance_recent.csv  citywide_surge_511_metrics.csv  citywide_surge_511_metrics.json  fi_collision_t1.csv  fi_collision_t2.csv  fi_ksi_t1.csv  fi_ksi_t2.csv  hrdps_wcs_coverage_list.csv  micro_weather_feature_importance_round1_batch5.csv  micro_weather_fetch_errors.csv  micro_weather_vs_baseline_metrics_round1_batch5.csv  micro_weather_vs_baseline_metrics_round1_batch5.json  nbhd_metrics.json  stage_d_refresh_design.md  surge_metrics.json
models/: citywide_model.pkl
notebooks/: 00_build_dim_neighbourhoods.html  00_build_dim_neighbourhoods.ipynb  01_collisions_to_neighbourhood_daily.html  01_collisions_to_neighbourhood_daily.ipynb  02B_add_nbhd_id_to_base.html  02B_add_nbhd_id_to_base.ipynb  02_build_base_nbhd_day_table.html  02_build_base_nbhd_day_table.ipynb  03B_merge_ksi_into_base.html  03B_merge_ksi_into_base.ipynb  03_ksi_to_nbhd_daily.html  03_ksi_to_nbhd_daily.ipynb  04A_hrdps_wcs_discovery.ipynb  04B1_weather_obs_daily_to_interim.ipynb  04B_fetch_historical_weather.ipynb  04C_merge_weather_into_gold.ipynb  05_feature_engineering.ipynb  06_model_citywide_surge.ipynb  07_model_nbhd_risk_ranking.ipynb  08_511_exploration.ipynb  (+8 more)
src/: cli.py  (+2 more)
(+49 files in other folders)
